Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40466

Windows: Uninitialized value when calling GetWindowPlacement

XMLWordPrintable

    • c7634050d9675006ceb4dd0c17846d18ec0f24c5

      According to documentation:
      http://msdn.microsoft.com/en-us/library/windows/desktop/ms633518%28v=vs.85%29.aspx

      Before calling GetWindowPlacement, set the length member to sizeof(WINDOWPLACEMENT). GetWindowPlacement fails if lpwndpl-> length is not set correctly.

      In Qt 4.x, this is uninitialized in QWidgetPrivate::setGeometry_sys()

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes