qwidget_win.cpp: Initialize WINDOWPLACEMENT correctly.

Task-number: QTBUG-40466
Change-Id: I93ff7977d68d36bc89f98d6a43c103a2a8d730f7
Reviewed-by: Oliver Wolff <oliver.wolff@digia.com>